vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Sets the WDR ConfidenceFilter threshold value for the device specified by <code>device</code>. 
* @param[in] 	device			The handle of the device on which to set the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	threshold		The threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetWDRConfidenceFilterThreshold(PsDeviceHandle device, uint32_t sessionIndex, PsWDRConfidenceThreshold wdrconfidencethreshold);
/**
* @brief 		Gets the WDR ConfidenceFilter threshold value for the device specified by <code>device</code>. 
* @param[in] 	device			The handle of the device on which to set the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	threshold		The threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetWDRConfidenceFilterThreshold(PsDeviceHandle device, uint32_t sessionIndex, PsWDRConfidenceThreshold* wdrconfidencethreshold);
/**
* @brief 		Opens the device specified by <code>ip</code>. The device must be subsequently closed using PsCloseDevice().
* @param[in] 	ip			the ip of the device. See ::PsDeviceInfo for more information.
* @param[out]	pDevices	the handle of the device on which to open.
* @return: 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_OpenDeviceByIP(const char* ip, PsDeviceHandle* pDevice);
/**
* @brief		Enables or disables the RGB manual exposure feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBManualExposureEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool enabled);
/**
* @brief 		Returns the Boolean value of whether the RGB manual exposure feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBManualExposureEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool* enabled);
/**
* @brief 		Sets the RGB absolute exposure in manual.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[in]	value			The value of brightness,in [1,4000] and the unit is 100us.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBAbsoluteExposure(PsDeviceHandle device, uint32_t sessionIndex, uint16_t value);
/**
* @brief 		Gets the RGB absolute exposure in manual.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[out]	value			The value of brightness,in [1,4000] and the unit is 100us.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBAbsoluteExposure(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* value);