vzense-sys/bindings/dcam560.rs

unsafe extern "C" {
    #[doc = " @brief \t\tSets the WDR ConfidenceFilter threshold value for the device specified by <code>device</code>.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the threshold.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tthreshold\t\tThe threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetWDRConfidenceFilterThreshold(
        device: PsDeviceHandle,
        sessionIndex: u32,
        wdrconfidencethreshold: PsWDRConfidenceThreshold,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tGets the WDR ConfidenceFilter threshold value for the device specified by <code>device</code>.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the threshold.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tthreshold\t\tThe threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetWDRConfidenceFilterThreshold(
        device: PsDeviceHandle,
        sessionIndex: u32,
        wdrconfidencethreshold: *mut PsWDRConfidenceThreshold,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tOpens the device specified by <code>ip</code>. The device must be subsequently closed using PsCloseDevice().\n @param[in] \tip\t\t\tthe ip of the device. See ::PsDeviceInfo for more information.\n @param[out]\tpDevices\tthe handle of the device on which to open.\n @return: \t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_OpenDeviceByIP(
        ip: *const ::std::os::raw::c_char,
        pDevice: *mut PsDeviceHandle,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the RGB manual exposure feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetRGBManualExposureEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        enabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the RGB manual exposure feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetRGBManualExposureEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        enabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tSets the RGB absolute exposure in manual.\n @param[in] \tdevice\t\t\tThe handle of the device.\n @param[in] \tsessionIndex\tThe index of the session.\n @param[in]\tvalue\t\t\tThe value of brightness,in [1,4000] and the unit is 100us.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetRGBAbsoluteExposure(
        device: PsDeviceHandle,
        sessionIndex: u32,
        value: u16,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tGets the RGB absolute exposure in manual.\n @param[in] \tdevice\t\t\tThe handle of the device.\n @param[in] \tsessionIndex\tThe index of the session.\n @param[out]\tvalue\t\t\tThe value of brightness,in [1,4000] and the unit is 100us.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetRGBAbsoluteExposure(
        device: PsDeviceHandle,
        sessionIndex: u32,
        value: *mut u16,
    ) -> PsReturnStatus;
}
